# Thinkbridge_assignment

./: .gitignore  .pre-commit-config.yaml  README.md  checkpoint.json  companies.csv  pyproject.toml  test_scraping_flow.py  vector_stores_metadata.json
.docs/: sales_factsheet_pipeline_specification.md
extracted_data/: dreeshomes_com__clean_text_20250806_212004.txt  dreeshomes_com__processed_20250806_212004.json  dreeshomes_com__raw_20250806_212004.json
factsheets/: drees-homes.md
src/thinkbridge/: __init__.py  cleaner.py  example.py  generate.py  ingest.py  output.py  scraper.py  store.py  template_manager.py
src/thinkbridge/templates/: construction.md  fintech.md  generic.md  healthcare.md  technology.md
tests/: __init__.py  test_cleaner.py  test_example.py  test_generate.py  test_ingest.py  test_output.py  test_scraper.py  test_store.py  test_template_manager.py
